<resources>
    <string name="app_name">Mat</string>
    <string name="jai_likhmidasji_ri">Jai Likhmidasji Ri</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="description_otp">We will send you one time password\non this mobile number.</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="_91">+91 - </string>
    <string name="get_otp">GET OTP</string>
    <string name="_spl_tx">आवो कालजे री कोर,\nबांधो रिस्तो री डोर,</string>
    <string name="_spl_tx_dsc">मारवाड़ी समाज\nMarwaDi community</string>
    <string name="tag_line_one">Tag Line One</string>
    <string name="tag_dsc">Users going through a vetting process to\nensure you never match with bots.</string>
    <string name="create_an_account">Create an account</string>
    <string name="_sign_in">Already have an account?<b><font color="#F9464A">Sign In</font></b></string>
    <string name="select_language">Select Language</string>
    <string name="app_language">App Language</string>
    <string name="next">Next</string>
    <string name="enter_otp_sent_to_91_88238_18283">Enter OTP Sent to <b><font color="#FF000000">+91 - 88238 18283</font></b></string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="didn_t_receive_otp_resend_otp">Didn’t Receive OTP <b><font color="#F9464A">RESEND OTP</font></b></string>
    <string name="otp_verify_dsc">By signing up you agree to our Term of\nuse and privacy policy</string>
    <string name="verify_process"><![CDATA[VERIFY & PROCESS]]></string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="get_access_to_all_features">Get access to all features</string>
    <string name="ch_bx_1_dsc">Lorem ipsum dolor sit is simple and most used</string>
    <string name="chec_txt_2">Lorem ipsum dolor sit is simple</string>
    <string name="chec_txt_3">Lorem ipsum dolor sit is simple and most used</string>
    <string name="lorem_ipsum_dolor_sit_is_simple_and_most">Lorem ipsum dolor sit is simple and most</string>
    <string name="best_value">Best Value</string>
    <string name="go_with_1_year_plan">Go with 1 Year Plan</string>
    <string name="_6_month_499"><font size="40">6</font>\nMonths\n$499</string>
</resources>