<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view_rectangle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/ic_ractangle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDasji"
        android:layout_width="@dimen/_94sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_marginBottom="@dimen/_58sdp"
        android:src="@drawable/ic_dasji"
        app:layout_constraintBottom_toBottomOf="@id/view_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblLaxmiDasji"
        android:layout_width="wrap_content"
        style="@style/Text16BoldWhiteStyle"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/jai_likhmidasji_ri"
        app:layout_constraintEnd_toEndOf="@id/imgDasji"
        app:layout_constraintStart_toStartOf="@id/imgDasji"
        app:layout_constraintTop_toBottomOf="@id/imgDasji" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/view_rectangle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblOtp"
            android:layout_width="wrap_content"
            style="@style/Text18BoldWhiteStyle"
            android:text="@string/otp_verification"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblOtpDesc"
            android:layout_width="wrap_content"
            style="@style/Text14LightWhiteStyle"
            android:textColor="@color/color_grey"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/description_otp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblEnterNumber"
            android:layout_width="wrap_content"
            style="@style/Text14LightWhiteStyle"
            android:textColor="@color/color_grey"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/enter_mobile_number"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEnterMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:inputType="number"
            android:text="@string/_91"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonParentStyle"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/get_otp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>