<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubcriptionActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSubcription"
        style="@style/Text20BoldWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_subscription"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSubcription"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_210sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSubcription"
        app:srcCompat="@drawable/ic_wedding" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblSubcription"
        style="@style/Text20BoldWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_43sdp"
        android:text="@string/get_access_to_all_features"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgSubcription" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/lblSubcription">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checkImg1"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/img_chck_bg"
                android:padding="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_checked" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12MediumWhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"

                android:text="@string/ch_bx_1_dsc"
                android:textColor="@color/color_grey" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checkImg2"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/img_chck_bg"
                android:padding="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_checked" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12MediumWhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"

                android:text="@string/chec_txt_2"
                android:textColor="@color/color_grey" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checkImg3"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/img_chck_bg"
                android:padding="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_checked" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12MediumWhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"

                android:text="@string/chec_txt_3"
                android:textColor="@color/color_grey" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checkImg4"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/img_chck_bg"
                android:padding="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_checked" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12MediumWhiteStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:gravity="center"
                android:text="@string/lorem_ipsum_dolor_sit_is_simple_and_most"
                android:textColor="@color/color_grey" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnValue"
        style="@style/ButtonParentStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/best_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1" />


</androidx.constraintlayout.widget.ConstraintLayout>