<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LangauageActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img1"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="@dimen/_62sdp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_girl_1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img2"
        android:layout_width="@dimen/_205sdp"
        android:layout_height="@dimen/_340sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_39sdp"
        android:layout_marginEnd="36dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/img3"
        app:layout_constraintStart_toEndOf="@id/img1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_girl_2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img3"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="@dimen/_62sdp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_girl_3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblTagLine"
        style="@style/Text18BoldWhiteStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_23sdp"
        android:gravity="center"
        android:text="@string/select_language"
        android:textColor="@color/color_light_red"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img2" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtLanguage"
        style="@style/Text12LightWhiteStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/edit_tx_bg"
        android:drawableEnd="@drawable/ic_icon"
        android:hint="@string/app_language"
        android:padding="@dimen/_5sdp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTagLine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        style="@style/ButtonParentStyle"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:layout_marginEnd="@dimen/_19sdp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtLanguage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgRing"
        android:layout_width="@dimen/_196sdp"
        android:layout_height="@dimen/_80sdp"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_ring" />

</androidx.constraintlayout.widget.ConstraintLayout>